--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vuepress-plugin-tagging",
   "version": "0.1.0",
-  "description": "",
+  "description": "VuePress plugin for creating tag pages using frontmatter.",
   "main": "src/index.js",
   "scripts": {
     "dev": "vuepress dev example/",
@@ -15,6 +15,21 @@
     "vuepress": "^1.9.10",
     "vuepress-types": "^0.9.4"
   },
+  "files": [
+    "src/**",
+    "README.md",
+    "CHANGELOG.md",
+    "LICENSE"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/smori1983/vuepress-plugin-tagging.git"
+  },
+  "keywords": [
+    "vuepress",
+    "vuepress-plugin"
+  ],
   "author": "Shinichiro MORI",
-  "license": "MIT"
+  "license": "MIT",
+  "homepage": "https://github.com/smori1983/vuepress-plugin-tagging"
 }
