--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "VuePress plugin for creating tag pages using frontmatter.",
   "main": "src/index.js",
   "scripts": {
-    "dev": "vuepress dev example/",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vuepress dev example/"
   },
   "dependencies": {
     "@vuepress/shared-utils": "^1.9.10"
