--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "VuePress plugin for creating tag pages using frontmatter.",
   "main": "src/index.js",
   "scripts": {
-    "dev": "vuepress dev example/"
+    "example": "vuepress dev example/"
   },
   "dependencies": {
     "@vuepress/shared-utils": "^1.9.10"
